<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/translucence_grey"
    android:gravity="center"
    android:layout_height="wrap_content">

    <TextView
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/set_text_size"
        android:textSize="20sp"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent" />
    <LinearLayout
        android:gravity="center"
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="80dp">
        <TextView
            android:id="@+id/little"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/little"
            android:textColor="@drawable/selector_tv_color_gray_white"
            android:background="@drawable/selector_textsize_bg_with_orange"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        <TextView
            android:id="@+id/medium"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/medium"
            android:textColor="@drawable/selector_tv_color_gray_white"
            android:background="@drawable/selector_textsize_bg_with_orange"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        <TextView
            android:id="@+id/big"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/big"
            android:textColor="@drawable/selector_tv_color_gray_white"
            android:background="@drawable/selector_textsize_bg_with_orange"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        <TextView
            android:id="@+id/most_big"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/most_big"
            android:textColor="@drawable/selector_tv_color_gray_white"
            android:background="@drawable/selector_textsize_bg_with_orange"
            android:layout_width="40dp"
            android:layout_height="40dp" />
    </LinearLayout>
</LinearLayout>