<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gdctwh.attestationrecords.acitvity.ResetPswAndUserClauseActivity">

    <LinearLayout
        android:id="@+id/lly_reset_psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_resetpsw_account"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/shape_edite_text"
            android:hint="@string/hint_phone_email"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_code"
                android:layout_width="135dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape_edite_text"
                android:hint="@string/hint_code"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="13sp" />

            <Button
                android:id="@+id/btn_get_code"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/selector_btn"
                android:text="点击获取验证码"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/selector_btn"
            android:text="@string/tv_next"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/sll_user_clause"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:textColor="@color/black"
                android:textSize="13sp"
                android:lineSpacingExtra="7dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tv_user_clause" />

            <TextView
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="Copyright © 1998 - 2018 Tencent. All Rights Reserved\n腾讯公司 版权所有"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
